fixed issue with setting grid with a gap and offset

--- a/src/public-components/grid/grid.scss
+++ b/src/public-components/grid/grid.scss
@@ -1,10 +1,10 @@
-.grid {
+.p-grid {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     box-sizing: border-box;
 
-    .column {
+    .p-column {
         flex-shrink: 0;
         box-sizing: border-box;
     }
